--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "esbuild-sample",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "start": "node ./builder.js",
     "build": "NODE_ENV=production node ./builder.js"
   },
   "devDependencies": {
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "esbuild": "^0.14.47",
     "esbuild-sass-plugin": "^2.2.6",
     "postcss": "^8.4.14",
-    "postcss-modules": "^4.3.1"
+    "postcss-modules": "^4.3.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "react": "^18.2.0",
